<resources>

    <string name="app_name">AssetTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_register">Register Here</string>
    <string name="txt_ok">OK</string>

    <string name="txt_empID">Employee ID</string>
    <string name="txt_NewPassword">Employee ID</string>
    <string name="txt_ConfirmNewPassword">Confirm New Password</string>
    <string name="txt_done">Done</string>


    <string name="invalid_Login_Title">Failed log in</string>
    <string name="invalid_Login_text">Incorrect username or password</string>

</resources>
