<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/txt_username"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/ATUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/txt_password"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/ATPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/ATBLogin"
        android:text="@string/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ATTVRegister"
        android:layout_width="wrap_content"
        android:text="@string/txt_register"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

</LinearLayout>
